<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">


    <item android:id="@+id/action_settings" android:title="@string/activity_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/exit" android:title="@string/exit"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/restart" android:icon="@drawable/restart" android:title="@string/restart"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/home" android:icon="@drawable/home" android:title="@string/home"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/share"  android:title="Share App"
        android:icon="@drawable/share" android:orderInCategory="1" app:showAsAction="always"/>
</menu>
