<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main2" tools:context="com.ironoid.fdsquiz.MainActivity"
    android:background="@drawable/bg"
    >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FDS"
        android:id="@+id/fdsquiz"

        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bt"
        android:textColor="#c1ffc9" />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deldquiz"
        android:id="@+id/delduiz"
        android:layout_below="@+id/fdsquiz"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/bt"
        android:textColor="#c1ffc9" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coquiz"
        android:id="@+id/coquiz"
        android:layout_below="@+id/delduiz"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/bt"
        android:textColor="#c1ffc9"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/faq_logo"
        android:src="@drawable/logo"
        android:layout_above="@+id/fdsquiz"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="72dp"
        android:layout_marginRight="20dp" />

</RelativeLayout>
